# sql-infer

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  ROADMAP.md  build.sh  sqlpy.py
.github/workflows/: macos.yaml  release.yaml
.sqlx/: query-7ddc1e28370372e8cac5679f8e73bfdd374ac4092171776c1b9cf3704d32d15c.json  query-ece9b7a87d49308bb6f6ed0b666e96ead2c4489a6fe004e13a18eb698f87ec4b.json  query-fce95d87dc08b3880e3a5b9946c2f33661d3874c6fa7b2dc84a76d2fb5c69ae4.json
sql-infer/: Cargo.toml
sql-infer-cli/: Cargo.toml  example.toml
sql-infer-cli/.sqlx/: query-7274b794dbcaeae4720219d4101718f0b5085470266ebaa7165c6bd4dbe0bd37.json  query-d150dbae730d1f9343fb408c1d0a1cdbac9e7df21c3601e190eafd74d286a78a.json  query-f6b13c50a295cbaa914d6240bdd012ae8156f8355d5ea50e874e4bfb933c3dd5.json
sql-infer-cli/src/: codegen.rs  commands.rs  config.rs  main.rs  schema.rs  utils.rs
sql-infer-cli/src/codegen/: json.rs  py_utils.rs  sqlalchemy.rs  sqlalchemy_async.rs  sqlalchemy_v2.rs
sql-infer-cli/src/codegen/sqlalchemy/: template.txt
sql-infer-cli/src/codegen/sqlalchemy_async/: template.txt
sql-infer-cli/src/commands/: analyze.rs  generate.rs  schema.rs
sql-infer-cli/src/schema/: lint.rs
sql-infer-core/: Cargo.toml
sql-infer-core/.sqlx/: query-9aa101c5c306a81e1c7d65ea9e039feb468e459aa18f7370e4c0296f682883ee.json
sql-infer-core/src/: inference.rs  lib.rs  parser.rs
sql-infer-core/src/inference/: datatypes.rs  nullability.rs
sql-infer-py/: build.py  pyproject.toml
sql-infer-py/src/sql_infer/: main.py
sql-infer/src/: check_query.rs  config.rs  main.rs  query_converter.rs
sql-infer/src/codegen/: json.rs  sqlalchemy.rs  sqlalchemy_async.rs
src/: check_query.rs  codegen.rs  commands.rs  config.rs  main.rs  parser.rs  query_converter.rs  sqlalchemy.rs  template.txt  utils.rs
src/codegen/: json.rs  sqlalchemy.rs  sqlalchemy_async.rs
src/codegen/sqlalchemy/: template.txt
