[package]
name = "sql-infer-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
sql-infer-core = { path = "../sql-infer-core" }
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.22"
toml = "0.9.2"

sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "tls-native-tls", "time"] }
serde_json = "1.0.141"
regex = "1.11.1"
dotenvy = "0.15.7"
