[package]
name = "sql-infer-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
sql-infer-core = { path = "../sql-infer-core" }
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
toml = "0.9.12"

sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
] }
serde_json = "1.0.149"
regex = "1.12.3"
dotenvy = "0.15.7"
