[package]
name = "sql-infer-core"
version = "0.1.0"
edition = "2024"

[dependencies]

chrono = { version = "0.4.39", features = ["serde"] }
regex = "1.11.1"
serde = { version = "1.0.218", features = ["derive"] }
sqlparser = "0.57.0"

sqlx = { version = "0.8.2", features = [
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
    "time",
] }
tracing = "0.1.41"
