[package]
name = "sql-infer-core"
version = "0.1.0"
edition = "2024"

[dependencies]

chrono = { version = "0.4.42", features = ["serde"] }
regex = "1.11.2"
serde = { version = "1.0.225", features = ["derive"] }
sqlparser = { version = "0.60.0", features = ["bigdecimal"] }

sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
    "time",
] }
tracing = "0.1.41"
