[package]
name = "sql-infer-core"
version = "0.1.0"
edition = "2024"

[dependencies]

regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
sqlparser = { version = "0.62.0", features = ["bigdecimal"] }

sqlx = { version = "0.8.6", features = ["postgres", "tls-native-tls"] }
tracing = "0.1.44"
